# phonesense

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
demo/: multi_ip_banner.py
examples/: opencv_check.py  opencv_import.py  opencv_url.py
src/phonesense/: __init__.py  api.py  cli.py  server.py  tls.py
src/phonesense/web/: dashboard.html  phone.html
tests/: conftest.py  test_cli_banner.py  test_cli_choose.py  test_lan_ips.py
