[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phonesense"
version = "0.2.0"
description = "Turn a phone into a LAN camera + motion-sensor source for Python — one line, no app to install."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wei" }]
keywords = ["camera", "opencv", "webcam", "phone", "mjpeg", "sensors", "stem", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "aiohttp>=3.9",
    "segno>=1.6",
    "cryptography>=42",
    "platformdirs>=4",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/snappyxo/phonesense"
Repository = "https://github.com/snappyxo/phonesense"
Issues = "https://github.com/snappyxo/phonesense/issues"

[project.scripts]
phonesense = "phonesense.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/phonesense"]
artifacts = ["src/phonesense/web/*.html"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
